<resources>
    <string name="app_name">Skin Expert</string>

    <string name="fragment_my_title">我的</string>
    <string name="fragment_my_login_or_register">登录或注册</string>
    <string name="fragment_my_skin">我的肤质</string>
    <string name="fragment_my_post">我的帖子</string>
    <string name="fragment_my_product">我的护肤品</string>
    <string name="fragment_my_indent">我的订单</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_my_location">我的收货地址</string>
    <string name="fragment_my_skin_fund">美肤家基金</string>
    <string name="fragment_my_friend">邀请好友</string>
    <string name="fragment_my_about">关于美肤家</string>
    <string name="notification_msglist_setting">通知设置</string>
    <string name="notification_msglist_skinmsg">美肤佳消息</string>
    <string name="my_setting_settxt">设置</string>
    <string name="my_setting_clear_cache">清除缓存</string>
    <string name="my_setting_current_version">当前版本</string>
    <string name="my_setting_account_bind">账号绑定</string>
    <string name="my_setting_login_out">退出登录</string>
    <string name="my_setting_my_support">我赞过的</string>
    <string name="about_skin">关于美肤家</string>
    <string name="my_post_title">我的帖子</string>
    <string name="my_product_title">我的产品</string>
    <string name="my_indent_title">我的订单</string>
    <string name="my_indent_help">客服帮助</string>
    <string name="my_location_title">选择收货地址</string>
    <string name="my_location_add_new_location">新增地址</string>
    <string name="change_location_title">修改收货地址</string>
    <string name="change_location_alert_message">根据保说区海关政策要求，请填写收货人身份证号</string>
    <string name="change_location_hint_message">您的身份证将被加密，请放心填写</string>
    <string name="change_location_btn_save">保存地址</string>
    <string name="change_location_details_set">省、市、区</string>
    <string name="add_location_title">新增收货地址</string>
    <string name="change_location_hint_name">收货人姓名</string>
    <string name="change_location_hint_phone">手机号码</string>
    <string name="change_location_hint_details">详细地址</string>
    <string name="my_skin_fund_title">我的美肤家基金</string>
    <string name="my_skin_fund_redemption">换购福利</string>
    <string name="fragment_benefits_title">福利</string>
    <string name="news_details_title">消息</string>
    <string name="my_like_title">我赞过的</string>
    <string name="my_like_article">还没有喜欢的文章</string>
    <string name="account_bind_title">账号绑定</string>
    <string name="account_bind_txt1">微信</string>
    <string name="account_bind_txt4">绑定账号后可以使用它们登录美肤家</string>
    <string name="account_bind_btn1">绑定</string>
    <string name="account_bind_txt2">新浪微博</string>
    <string name="account_bind_btn2">修改</string>
    <string name="account_bind_txt3">手机号</string>
    <string name="skin_test_title">肤质测试</string>
    <string name="skin_test_question1">您的年龄是?</string>
    <string name="next_step">下一步</string>
    <string name="skin_test_question2">干性/油性测试</string>
    <string name="skin_test_question2_describe1">
        在这部分是测试您皮肤的油脂分泌和湿度，研究表明人们对自己的皮肤油性还是干性想法上往往是错误的，请您结合最近几个月的实际情况来回答测试问题。
    </string>
    <string name="skin_test_question2_describe2">
       这部分测试您的皮肤是否有形成黑色素的倾向，皮肤色素导致皮肤色泽度增加，并在皮肤损伤后产生色斑、雀斑和灰暗区域。但黑色素会帮您不被晒伤。
    </string>
    <string name="skin_test_question2_describe3">
        这部分测试了您是否会有粉刺痤疮、发红、红斑、发痒、等敏感型皮肤的倾向，这项测试十分重要，是您选购护肤品的重要依据。>
    </string>
    <string name="skin_test_question2_describe4">
       这部分测试您是否容易产生皱纹，以及您现在有多少皱纹。这有助于您预防皱纹的产生，请不要因为年轻忽视这项测试.
    </string>
    <string name="skin_test_page1_next_step">进入该项测试</string>
    <string name="produce_detail">产品详情</string>
    <string name="produce_share">分享</string>
    <string name="want_to_use">想用</string>
    <string name="detail_used">用过</string>
    <string name="comunit_in_comunity">社区讨论</string>
    <string name="oily_test_title">干性/油性测试</string>
    <string name="next_topic">上一题</string>
    <string name="test_login_out">退出</string>
    <string name="skin_test_result_retest">重新测试</string>
    <string name="skin_test_result_yourskin">你的皮肤属于</string>
    <string name="test_finish">完成</string>
    <string name="skin_message_test">如果你在后边的耐受\\/敏感测试中为敏感性皮肤，你可能会较经常发生皮肤瘙痒、起屑和发红，皮肤的屏障功能不佳。需要注意的是，当季节和你的生活规律发生改变，你的肤质也可能更接近于油性皮肤，也需要关注一下相关的护理方法</string>
    <string name="test_next_step">下一步</string>
    <string name="skin_test_feature">肤质特点</string>
    <string name="skin_test_decribe">测试说明</string>
    <string name="skin_test_ganxing">干性，油性测试</string>
    <string name="skin_test_ganxing_result">轻度干性</string>
    <string name="skin_test_mingan">敏感/耐性测试</string>
    <string name="skin_test_mingan_result">重度敏感</string>
    <string name="skin_test_seshu">色素/非色素测试</string>
    <string name="skin_test_sesu_result">色素</string>
    <string name="skin_test_yizou">易皱纹/紧致测试</string>
    <string name="skin_test_yizhou_result">紧致</string>
    <string name="skin_test_age">年龄</string>
    <string name="skin_test_finish_click">以上项目测试完成后，点击</string>
    <string name="skin_test_finish_hint">提示：点击以上标题进入相关测试或直接选择结果，完成全部四项测试后可生成肤质分析报告</string>
    <string name="skin_test_describe">肤质测试说明</string>
    <string name="dialog_show_hint">如果非常确定自己的类型，可跳过测试，直接选择皮肤类型</string>
    <string name="dialog_show_auto_test">进入测试(推荐)</string>
    <string name="dialog_show_auto_cancel">取消</string>
    <string name="element_detail">成分详情</string>
    <string name="skin_fund_redemption_title">基金换购</string>
    <string name="skin_fund_redemption_details">产品详情</string>
    <string name="my_like_post">还没有喜欢的帖子</string>
    <string name="app_name_zh">美肤家</string>
    <string name="app_description">全球第一款根据肌肤类型准确推荐护肤品的app</string>
    <string name="weixin">微信</string>
    <string name="weibo">微博</string>
    <string name="phone_login">手机登录</string>
    <string name="register_account">注册账号</string>
    <string name="register_title">注册</string>
    <string name="register_edit_phone_hint">  请填写手机号码</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="weixin_login">微信登录</string>
    <string name="weibo_login">微博登录</string>
    <string name="register_edit_pwd">请输入密码</string>
    <string name="register_edit_pwd_confirm">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="login_title">登录</string>
    <string name="login_edit_phone_hint">手机号</string>
    <string name="login_edit_pwd_hint">密码</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_mode_select">或通过以下方式快速登录</string>
    <string name="fragment_my_username_default">MFJ3284</string>
    <string name="verification_title">验证</string>
    <string name="verifaication_edit_verification_code_hint">输入短信验证码</string>
    <string name="resend">重新发送</string>
    <string name="account_info_title">账户信息</string>
    <string name="nickname_hint">昵称</string>
    <string name="set_pwd">设置密码</string>
    <string name="finish">完成</string>
    <string name="person_info_title">个人信息</string>
    <string name="head_img_txt">头像</string>
    <string name="nickname">昵称</string>
    <string name="birthday">生日</string>
    <string name="gender">性别</string>
    <string name="city">城市</string>
    <string name="nick_modify">昵称修改</string>
    <string name="nick_modify_save">保存</string>

</resources>
