<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_skin_test_finish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/head_backcolor"
    android:orientation="vertical"
    tools:context="com.zhanghao.skinexpert.Activity.SkinTestFinishActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/skin_test_finish_btn_back"
            android:layout_gravity="center_vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@mipmap/ic_return_back"/>
        <TextView
            android:id="@+id/skin_test_finish_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:text="@string/skin_test_title"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_dark"/>
        <Button
            android:id="@+id/skin_test_finish_btn_decribe"
            android:layout_gravity="center_vertical"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="17sp"
            android:textColor="@color/background_material_dark"
            android:text="@string/skin_test_decribe"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/skin_test_finish_item1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skin_test_ganxing"
            android:textSize="15sp"
            android:gravity="clip_vertical|left"
            android:layout_marginLeft="20dp"
            android:textColor="@color/button_material_dark"/>
        <TextView
            android:id="@+id/skin_test_oily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skin_test_ganxing_result"
            android:textSize="15sp"
            android:gravity="clip_vertical|left"
            android:layout_marginLeft="20dp"
            android:textColor="@color/red"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_enter_arrow"
            android:layout_marginRight="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/skin_test_finish_item2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skin_test_mingan"
            android:textSize="15sp"
            android:gravity="clip_vertical|left"
            android:layout_marginLeft="20dp"
            android:textColor="@color/button_material_dark"/>
        <TextView
            android:id="@+id/skin_test_tolerance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skin_test_mingan_result"
            android:textSize="15sp"
            android:gravity="clip_vertical|left"
            android:layout_marginLeft="20dp"
            android:textColor="@color/red"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_enter_arrow"
            android:layout_marginRight="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/skin_test_finish_item3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skin_test_seshu"
            android:textSize="15sp"
            android:gravity="clip_vertical|left"
            android:layout_marginLeft="20dp"
            android:textColor="@color/button_material_dark"/>
        <TextView
            android:id="@+id/skin_test_pigment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skin_test_sesu_result"
            android:textSize="15sp"
            android:gravity="clip_vertical|left"
            android:layout_marginLeft="20dp"
            android:textColor="@color/red"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_enter_arrow"
            android:layout_marginRight="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/skin_test_finish_item4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skin_test_yizou"
            android:textSize="15sp"
            android:gravity="clip_vertical|left"
            android:layout_marginLeft="20dp"
            android:textColor="@color/button_material_dark"/>
        <TextView
            android:id="@+id/skin_test_compact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skin_test_yizhou_result"
            android:textSize="15sp"
            android:gravity="clip_vertical|left"
            android:layout_marginLeft="20dp"
            android:textColor="@color/red"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_enter_arrow"
            android:layout_marginRight="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/skin_test_finish_item5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skin_test_age"
            android:textSize="15sp"
            android:gravity="clip_vertical|left"
            android:layout_marginLeft="20dp"
            android:textColor="@color/button_material_dark"/>
        <TextView
            android:id="@+id/skin_test_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="24"
            android:textSize="15sp"
            android:gravity="clip_vertical|left"
            android:layout_marginLeft="20dp"
            android:textColor="@color/red"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_enter_arrow"
            android:layout_marginRight="15dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/skin_test_finish_hint"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/skin_test_finish_click"
        android:layout_marginBottom="10dp"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_down_arrow"/>
    <Button
        android:id="@+id/skin_test_finish_btn"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:text="@string/test_finish"/>
</LinearLayout>
