<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_login_acitvity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0efef"
    android:orientation="vertical"
    tools:context="com.zhanghao.skinexpert.Activity.MyLoginAcitvity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/login_btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/ic_return_back"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/background_material_dark"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/login_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:text="@string/register_title"
            android:textColor="@color/red"
            android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_edit_phone_num"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/login_edit_phone_hint"
            android:textColorHint="@color/material_dark"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/button_disabled_gray"/>

        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/login_edit_pwd_hint"
            android:textColorHint="@color/material_dark"/>
    </LinearLayout>

    <TextView
        android:id="@+id/login_forget_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:text="@string/login_forget_pwd"
        android:textColor="@color/text_normal_gray"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/red"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_mode_select"
        android:textColor="@color/text_normal_gray"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/login_weixin_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:text="@string/weixin_login"
        android:textColor="@color/dim_foreground_material_light"
        android:textSize="17sp"
        />

    <Button
        android:id="@+id/login_weibo_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:text="@string/weibo_login"
        android:textColor="@color/dim_foreground_material_light"
        android:textSize="17sp"
        />
</LinearLayout>
