<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account_bind"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/head_backcolor"
    android:orientation="vertical"
    tools:context="com.zhanghao.skinexpert.Activity.AccountBindActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/account_bind_btn_back"
            android:layout_gravity="center_vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/ic_return_back"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_marginRight="30dp"
            android:text="@string/account_bind_title"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_dark"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/account_bind_txt1"
        android:textSize="18sp"
        android:textColor="@color/background_material_dark"/>
    <Button
        android:id="@+id/account_bind_btnweixin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_bind_btn1"
        android:textSize="18sp"
        android:background="@null"
        android:textColor="@color/red"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/account_bind_txt2"
            android:textSize="18sp"
            android:textColor="@color/background_material_dark"/>
        <Button
            android:id="@+id/account_bind_btnweibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_bind_btn1"
            android:textSize="18sp"
            android:background="@null"
            android:textColor="@color/red"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/account_bind_txt3"
            android:textSize="18sp"
            android:textColor="@color/background_material_dark"/>

        <TextView
            android:id="@+id/account_bind_phonenum_show"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:textColor="@color/background_material_dark"
            android:text="xxx-xxxx-xxxx"/>

        <Button
            android:id="@+id/account_bind_btnphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_bind_btn2"
            android:textSize="18sp"
            android:background="@null"
            android:textColor="@color/red"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/account_bind_txt4"
        android:textColor="@color/material_dark"
        android:textSize="15dp"/>
</LinearLayout>
