<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_skin_test_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/head_backcolor"
    android:orientation="vertical"
    tools:context="com.zhanghao.skinexpert.Activity.SkinTestResult">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/skin_test_result_btn_back"
            android:layout_gravity="center_vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@mipmap/ic_return_back"/>
        <TextView
            android:id="@+id/skin_test_result_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:text="@string/oily_test_title"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_dark"/>
        <Button
            android:id="@+id/skin_test_result_btn_retest"
            android:layout_gravity="center_vertical"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="17sp"
            android:textColor="@color/background_material_dark"
            android:text="@string/skin_test_result_retest"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="45dp"
            android:src="@mipmap/ic_result_flag"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_darker_gray"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:text="@string/skin_test_result_yourskin"/>
        <TextView
            android:id="@+id/skin_test_result_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="xx类型皮肤"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <TextView
            android:id="@+id/skin_test_result_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_darker_gray"
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/skin_message_test"/>
        <Button
            android:id="@+id/skin_test_result_btn_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/red"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:text="@string/test_next_step"/>
    </RelativeLayout>
</LinearLayout>
